tests/baselines/reference/unicodeExtendedEscapesInStrings20(target=es6).errors.txt
unicodeExtendedEscapesInStrings20.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInStrings20.ts (1 errors) ====
    var x = "\u{";
                
!!! error TS1125: Hexadecimal digit expected.
    